--- a/Part II - Machine Learning.ipynb
+++ b/Part II - Machine Learning.ipynb
@@ -2124,7 +2124,219 @@
    "metadata": {},
    "source": [
     "## MODEL REFINEMENT I: \n",
+    "## Apply Polynomial Regression\n",
+    "\n",
+    "Now it's time to determine the optimal degree of polynomial features for a model that is fit to this data. For each of second, third and fourth degrees: \n",
+    "\n",
+    "- Instantiate `PolynomialFeatures()` with the number of degrees \n",
+    "- Fit and transform the `X_train` features \n",
+    "- Instantiate and fit a linear regression model on the training data \n",
+    "- Transform the test data into polynomial features \n",
+    "- Use the model you built above to make predictions using the transformed test data \n",
+    "- Evaluate model performance on the test data using `r2_score()` \n",
+    "- In order to plot how well the model performs on the full dataset, transform `X` using `poly` \n",
+    "- Use the same model (`reg_poly`) to make predictions using `X_poly` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 625,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "degree 2 0.5461954755250832\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "X shape does not match training shape",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-625-763ff547357d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;31m# Transform the full data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mX_poly\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# Now, we want to see what the model predicts for the entire data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/sklearn/preprocessing/_data.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1554\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1555\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_input_features_\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1556\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"X shape does not match training shape\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1557\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1558\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misspmatrix_csr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: X shape does not match training shape"
+     ]
+    }
+   ],
+   "source": [
+    "# We'll fit 3 different polynomial regression models from degree 2 to degree 4\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "for index, degree in enumerate([2, 3, 4]):\n",
+    "    \n",
+    "    # Instantiate PolynomialFeatures\n",
+    "    poly = PolynomialFeatures(degree)\n",
+    "    \n",
+    "    # Fit and transform X_train\n",
+    "    X_poly_train = poly.fit_transform(X_train)\n",
+    "    \n",
+    "    # Instantiate and fit a linear regression model to the polynomial transformed train features\n",
+    "    reg_poly = LinearRegression().fit(X_poly_train, y_train)\n",
+    "    \n",
+    "    # Transform the test data into polynomial features\n",
+    "    X_poly_test = poly.fit_transform(X_test)\n",
+    "    \n",
+    "    # Get predicted values for transformed polynomial test data  \n",
+    "    y_pred = reg_poly.predict(X_poly_test)\n",
+    "    \n",
+    "    # Evaluate model performance on test data\n",
+    "    print(\"degree %d\" % degree, r2_score(y_test, y_pred))\n",
+    "    \n",
+    "    # Transform the full data\n",
+    "    X_poly = poly.transform(X)\n",
+    "    \n",
+    "    # Now, we want to see what the model predicts for the entire data \n",
+    "    y_poly = reg_poly.predict(X_poly)\n",
+    "    \n",
+    "    # Create plot of predicted values\n",
+    "    plt.plot(X, y_poly, color = colors[index], linewidth=2, label='degree %d' % degree)\n",
+    "    plt.legend(loc='lower left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the r2 is highest ( r2=0.767) and the root mean square error is lowest (rmse=0.255) for third order polynomial .So lets add a polynomil of degree 3 to out linear regression model.It will include interactions between diffrent features and make nour model more complex.\n",
+    "\n",
+    "Not adding polynomials is prone to overfitting.I decided include regularization to reduce over fitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fitting the above model on test set\n",
+    "est = make_pipeline(PolynomialFeatures(3,interaction_only=True), StandardScaler(), Lasso(0.0001))\n",
+    "est.fit(X_train, y_train)\n",
+    "est.predict(X_test)\n",
+    "rmse_te_Lasso=(np.sqrt(mean_squared_error(y_test, est.predict(X_test))))\n",
+    "r2_te_Lasso=(est.score(X_test,y_test))\n",
+    "print(rmse_te_Lasso,r2_te_Lasso)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#deloffing RMSE\n",
+    "rmse_test_delog=np.exp(rmse_te_Lasso)\n",
+    "print(rmse_test_delog)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The predicted values of home prices ( by this model)=Actual value of home prices +- 1.3%\n",
+    "\n",
+    "The root mean square error for the training and the test sets are low and almost the same (rmse_test=0.279,rmse_training=0.266).So there is no over fitting or underfitting.Adding a polynomial of degree 3 and regularizing the model with Lasso regularization controlled for underfitting and over fitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Regression plot for residuals\n",
+    "\n",
+    "test_pred=est.predict(X_test)\n",
+    "residuals_test=y_test-test_pred\n",
+    "\n",
+    "plt.figure(figsize=(13,8))\n",
+    "\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "sns.regplot(test_pred,y_test,scatter_kws={'color':'b','alpha':0.1},color='r')\n",
+    "sns.set(font_scale=1.3)\n",
+    "plt.title('Predicted vs Test')\n",
+    "plt.ylabel('Y_test')\n",
+    "plt.xlabel('Predicted Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Residual Plot\n",
+    "\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(13,8))\n",
+    "\n",
+    "plt.scatter(test_pred ,residuals_test,alpha=0.2)\n",
+    "plt.xlabel('Predicted Y (Home prices)')\n",
+    "plt.ylabel('Residuals')\n",
+    "plt.title(\"Residual Plot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Normal Q-Q plot\n",
+    "\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(13,8))\n",
+    "stats.probplot(residuals_test, dist=\"norm\", plot=plt)\n",
+    "plt.title(\"Normal Q-Q plot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(13,8))\n",
+    "sns.distplot(residuals_test, bins=50, kde=True)\n",
+    "plt.xlabel('Home Price')\n",
+    "plt.ylabel('Residuals')\n",
+    "plt.title(\"Distribution of Residuals\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MODEL REFINEMENT II:\n",
     "## INTERACTIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### See how interactions improve our baseline\n",
+    "\n",
+    "Create all possible combinations of interactions, loop over them and add them to the baseline model one by one to see how they affect the  𝑅2 . We'll look at the 3 interactions which have the biggest effect on our  𝑅2 , so print out the top 3 combinations."
    ]
   },
   {
@@ -2171,15 +2383,6 @@
    "source": [
     "baseline = np.mean(cross_val_score(regression, X, y, scoring = 'r2', cv = crossvalidation))\n",
     "baseline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### See how interactions improve our baseline\n",
-    "\n",
-    "Create all possible combinations of interactions, loop over them and add them to the baseline model one by one to see how they affect the  𝑅2 . We'll look at the 3 interactions which have the biggest effect on our  𝑅2 , so print out the top 3 combinations."
    ]
   },
   {
@@ -2322,13 +2525,6 @@
     "results = model.fit()\n",
     "\n",
     "results.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MODEL REFINEMENT II"
    ]
   },
   {
