--- a/Part II.A - Machine Learning.ipynb
+++ b/Part II.A - Machine Learning.ipynb
@@ -1222,7 +1222,9 @@
   {
    "cell_type": "code",
    "execution_count": 592,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1256,6 +1258,29 @@
     "plt.ylabel('Actual')\n",
     "plt.show()\n",
     "plt.savefig('./Data & Figures/model_A_homoscedasticity_regplot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 619,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('F statistic', 1.0157928175913467), ('p-value', 0.20896254809615292)]"
+      ]
+     },
+     "execution_count": 619,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Goldfeld-Quandt test\n",
+    "name = ['F statistic', 'p-value']\n",
+    "test = sms.het_goldfeldquandt(model_A.resid, model_A.model.exog)\n",
+    "list(zip(name, test))"
    ]
   },
   {
